--- a/src/components/FlowBuilder/Node/node.module.scss
+++ b/src/components/FlowBuilder/Node/node.module.scss
@@ -4,7 +4,8 @@
   border: 1px solid lightgrey;
   background-color: white;
   border-radius: 0.5rem;
-  width: 50%;
+  width: 100%;
+  min-width: 300px;
 
   .head {
     display: flex;
